title list+ left+right

--- a/рубеж 2/my site/page2.html
+++ b/рубеж 2/my site/page2.html
@@ -107,7 +107,7 @@ function a5()
 <font face="comic sans ms" size=+3 color=darkblue><b>
 <u>В задаче №1 пункта a) главное:</u><center>
 <font face="comic sans ms" size=+3 color=red><b> 
-Проверить работу асинхронного RS-триггера на логических элементах "ИЛИ-НЕ"
+Проверить работу простейшего 4-х разрядного суммирующего двоичного счетчика импульсов на T-триггерах;
 <script language="JavaScript">
 var photos=new Array()
 var photoslink=new Array()
