--- a/рубеж 2/my site/left.html
+++ b/рубеж 2/my site/left.html
@@ -27,7 +27,7 @@ a:hover {color: red; font-size: 19; font-weight: ; left: 10px}
 <center>
 <a href="right.html" target=R>
 <big><big><b> Отчет</big><br>
-о выполнении Контрольного Задания №1
+о выполнении Контрольного Задания №2
 </big>
 </a>
 <br><br><hr> </center>
@@ -55,9 +55,12 @@ a:hover {color: red; font-size: 19; font-weight: ; left: 10px}
 <li><a href="page12.html" target="R"> Рассказ о Решении задачи №3</a><BR>
 
 <li><a href="page13.html" target="R"> Результат решения задачи №3<br> </a>
+<li><a href="page12.html" target="R"> Рассказ о Решении задачи №4</a><BR>
+
+<li><a href="page13.html" target="R"> Результат решения задачи №4<br> </a>
 <br>
 
-<li><a href="page14.html" target="R"> Лабораторная работа №1</a><br>
+<li><a href="page14.html" target="R"> Лабораторная работа №2</a><br>
 <br>
 
 </ol>
