--- a/рубеж 2/my site/right.html
+++ b/рубеж 2/my site/right.html
@@ -26,9 +26,9 @@
 <font face="comic sans ms" size=+4 color=blue><b>
 ОТЧЕТ <br>
 <font face="comic sans ms" size=+3 color=darkblue><b>
-о выполнении Контрольно-рейтингового задания №1<br><br>
+о выполнении Контрольно-рейтингового задания №2<br><br>
 по курсу "Электроника и схемотехника"<br>
-на тему:"Изучение основ теории, построение моделей и демонстрация работы основных триггеров"<br><br><br>
+на тему:"Усвоение теории, построение моделей и демонстрация работы простейших (суммирующих и вычитающих) счетчиков, простейших дешифраторов и мультиплексоров "<br><br><br>
 <p align=right>
 <font face="comic sans ms" size=+2 color=blue><b>
 
