--- a/рубеж 2/my site/page2.html
+++ b/рубеж 2/my site/page2.html
@@ -105,7 +105,7 @@ function a5()
 </font>
 <center>
 <font face="comic sans ms" size=+3 color=darkblue><b>
-<u>В задаче №1 пункта a) главное:</u><center>
+<u>В задаче №1 главное:</u><center>
 <font face="comic sans ms" size=+3 color=red><b> 
 Проверить работу простейшего 4-х разрядного суммирующего двоичного счетчика импульсов на T-триггерах;
 <script language="JavaScript">
@@ -189,17 +189,17 @@ window.location=photoslink[which]
 <center>
 <font face="comic sans ms" size=+3 color=darkblue><b> 
 <a href="javascript: vv6()" > 
-Асинхронный RS-триггер (доп.окно)</a> на логических элементах ИЛИ-НЕ<br><br>
+4-х разрядного суммирующего двоичного счетчика</a> на T-триггерах<br><br>
 <IMG SRC="rs-nor.jpg" width=400 ALIGN="center"><br>
 
 <font face="comic sans ms" size=+3 color=blue><b>
 <center>
-ИТАК для решения задачи №1 пункта a) будем придерживаться следующего плана:<br>
+ИТАК для решения задачи №1 будем придерживаться следующего плана:<br>
 <p align=left>
 <font face="comic sans ms" size=+3 color=darkblue>
-1)Для понимания работы триггера вспомним 
+1)Для понимания работы счетчика вспомним 
 <a href="javascript: vv3()" > 
-таблицу истинности ИЛИ-НЕ (доп.окно)</a></font><br>
+Работу Т-триггера на микросхеме JK (доп.окно)</a></font><br>
 <SCRIPT language="javaScript">
 
 function vv()
@@ -209,7 +209,8 @@ function vv()
 </SCRIPT>
 </font>
 <font face="comic sans ms" size=+3 color=darkblue><b> 
-2)В результате построения триггера на компьютерной модели "TINA" будем ожидать получение таблицы состояний триггера.<br> <br>
+2)В результате построения 4-х разрядного двоичного счетчика на компьютерной модели "TINA" будем ожидать получение таблицы состояний счетчика и соответствующие преобразованние
+его двоичного числа в 7-сигментное изображение десятичного эквивалента.<br> <br>
 <font face="comic sans ms" size=+1 color=blue><b>
 Q(t) - состояние триггера до поступления управляющих сигналов (изменения на входах R и S);<br> 
 Q(t+1) - состояние триггера после изменения на входах R и S.<br> 
