--- a/рубеж 2/my site/page8.html
+++ b/рубеж 2/my site/page8.html
@@ -149,9 +149,9 @@ function a7()
 </font>
 <center>
 <font face="comic sans ms" size=+3 color=darkblue><b>
-<u>В задаче №2 пункта a) главное:</u><center>
+<u>В задаче №2 пункта:</u><center>
 <font face="comic sans ms" size=+3 color=red><b> 
-Проверить работу D-триггера построенного на логических элементах "И-НЕ"<br><br></font>
+Проверить работу 4-х разрядного вычитающего двоичного счетчика<br><br></font>
 <a href="javascript: vv8()" > 
 D-триггер (доп.окно)</a> на логических элементах И-НЕ<br>
 <font face="comic sans ms" size=+3 color=darkblue><b><hr color=red> 
