--- a/рубеж 2/my site/page1N.html
+++ b/рубеж 2/my site/page1N.html
@@ -70,15 +70,7 @@ function vv8()
 <font face="comic sans ms" size=+3 color=red><b> 
 Ключевые слова:
 <font face="comic sans ms" size=+3 color=darkblue><b> 
- <a href="javascript: vv1()"> <font size="+2" face="comic sans ms" color=darkblue> 
-модель 'TINA' (доп. окно)</font></a>, <a href="javascript: vv2()"> <font size="+2" face="comic sans ms" color=darkblue> 
-триггер (доп. окно)</font></a>, <a href="javascript: vv3()"> <font size="+2" face="comic sans ms" color=darkblue> 
-логический элемент ИЛИ-НЕ (доп. окно)</font></a>, <a href="javascript: vv4()"> <font size="+2" face="comic sans ms" color=darkblue> 
-логический элемент И-НЕ (доп. окно)</font></a>, <a href="javascript: vv5()"> <font size="+2" face="comic sans ms" color=darkblue> 
-микросхема JK (доп. окно)</font></a>, <a href="javascript: vv6()"> <font size="+2" face="comic sans ms" color=darkblue> 
-асинхронный RS-триггер (доп. окно)</font></a>, <a href="javascript: vv7()"> <font size="+2" face="comic sans ms" color=darkblue> 
-синхронный RS-триггер (доп. окно)</font></a>, <a href="javascript: vv8()"> <font size="+2" face="comic sans ms" color=darkblue> 
-D-триггер (доп. окно)</font></a>, T-триггер <br> <br>
+<a href="javascript: vv1()" > модель "TINA"</a>, <a href="javascript: vv2()" > дешифратор</a>, <a href="javascript: vv3()" > мультиплексор</a>, <a href="javascript: vv4()" > счетчик</a><br> <br>
 </font>
 <hr color=red><small><small>
 <font face="comic sans ms" size=+3 color=purple><b>
@@ -88,10 +80,8 @@ D-триггер (доп. окно)</font></a>, T-триггер <br> <br>
 <p align=left>
 Задача №1 <br>
 <font face="comic sans ms" size=+3 color=darkblue> <br>
-а) На компьютерной модели "TINA" собрать асинхронный RS-триггер на логических элементах "ИЛИ-НЕ" и проверить его работу. <br>
-b) На компьютерной модели "TINA" собрать синхронный RS-триггер на логических элементах "И-НЕ" и проверить его работу. <br>
-c) На компьютерной модели "TINA" собрать асинхронный RS-триггер на микросхеме JK и проверить его работу. <br>
-<br>
+На компьютерной модели "TINA" собрать схему простейшего 4-разрядного суммирующего счетчика на Т-триггерах и представить последовательность действий,
+демонстрирующих работу этого устройства в "TINA", в том числе преобразование двоичного кода на выходе счетчика в 7-ми сегментное изображение его десятичного эквивалента<br>
 <font face="comic sans ms" size=+3 color=blue><b>
 <center>
 <u>Исходя из поставленной задачи, ответим на вопросы:<br></u><br>
@@ -101,23 +91,22 @@ c) На компьютерной модели "TINA" собрать асинхронный RS-триггер на микросхеме JK
 <p align=left>
    <ul>
    <font face="comic sans ms" size=+3 color=darkblue>
-     <li><p align=left>Дана схема асинхронного RS-триггера на элементах "ИЛИ-НЕ", представленная в учебном материале Валерия Леонидовича ШАТУНОВСКОГО http://shat307.ru/_els19/index.html </li>
+     <li><p align=left>Дана программа компьютерного моделирования электронных схем "TINA" </li>
+     <li><p align=left>Дана проверенная на "TINA" схема Т-триггера и известен принцип работы этого триггера </li> 
+	 <li><p align=left>Дана схема простейшего 4-разрядного суммирующего двоичного счетчика на Т-триггерах и известен принцип работы этого счетчика </li>
 <IMG SRC="rs-nor.jpg" width="400" ALIGN="center"> <br>
-     <li><p align=left>Дана схема синхронного RS-триггера на элементах "И-НЕ", представленная в учебном материале Валерия Леонидовича ШАТУНОВСКОГО http://shat307.ru/_els19/index.html </li>
-<IMG SRC="rsc-nand.jpg" width="400" ALIGN="center"> <br>
-     <li><p align=left>Дана универсальная микросхема JK-триггера </li>
-<IMG SRC="jk-micr.jpg" width="400" ALIGN="center"> <br>
+     <li><p align=left>Дана микросхема дешифратора BCD to seven segment decoder и микросхема семисегментного индикатора </li>
 
 <hr size=+2 color=red>
 <font face="comic sans ms" size=+4 color=red>
 Что надо найти?
-</font> <br>Надо показать:<ul><li><p align=left> как работает асинхронный RS-триггер на элементах "ИЛИ-НЕ" в "TINA"<li><p align=left>
-как работает синхронный RS-триггер на элементах "И-НЕ" в "TINA"<li><p align=left>как работает асинхронный RS-триггер на микросхеме JK в "TINA" <br></ul>
+</font> <br>Надо показать:<ul><li><p align=left> процесс подсчета приходящих на счетчик импульсов в "TINA"
+<li><p align=left>как преобразовать полученный на счетчике двоичный код в изображение его десятичного эквивалента <br></ul>
 <font face="comic sans ms" size=+4 color=red><hr color=red>
 Как это сделать? <br> </font><font face="comic sans ms" size=+3 color=blue>
-<u>Для решения этой задачи</font></u> мы имеем компьютерную модель "TINA", где и будем собирать представленные схемы триггеров. 
-Затем, подавая различные сигналы на входы триггеров, мы будем составлять таблицы их состояний.<br><br>
-Задача будет считаться <i><font color=red>решенной верно</i></font>, если теоретические таблицы состояний триггеров совпадут с таблицами состояний, составленных нами в "TINA".
+<u>Для решения этой задачи</font></u> мы имеем компьютерную модель "TINA", где и будем собирать схему данного счетчика. 
+Подавая тактовые импульсы на вход счетчика, мы будем подсчитывать количество поданных импульсов.<br><br>
+Задача будет считаться <i><font color=red>решенной верно</i></font>, если количество пришедших на счетчик импульсов (до 15 включительно) совпадет с числом, выведенным на семисегментном индикаторе.
 <br>
 <hr color=red><hr color=red>
 <font face="comic sans ms" size=+4 color=blue><b> 
@@ -126,29 +115,36 @@ c) На компьютерной модели "TINA" собрать асинхронный RS-триггер на микросхеме JK
 <br>
 </font>
 <font face="comic sans ms" size=+3 color=darkblue> <br>
-a) На компьютерной модели "TINA" собрать D-триггер на логических элементах "И-НЕ" и проверить его работу.<br>
-b) На компьютерной модели "TINA" собрать D-триггер на микросхеме JK и проверить его работу.
-<br>
+На компьютерной модели "TINA" собрать схему простейшего 4-разрядного вычитающего счетчика на Т-триггерах и представить последовательность действий,
+демонстрирующих работу этого устройства в "TINA", в том числе преобразование двоичного кода на выходе счетчика в 7-ми сегментное изображение его десятичного эквивалента<br>
 <font face="comic sans ms" size=+3 color=blue><b>
 <center>
 <u>Исходя из поставленной задачи, ответим на вопросы:<br></u>
 <font face="comic sans ms" size=+4 color=red>
 <hr color=red>
-Что дано?<br></font>
+Что дано? <br></font>
 <p align=left>
    <ul>
    <font face="comic sans ms" size=+3 color=darkblue>
-     <li><p align=left>  Дана схема D-триггера на элементах "И-НЕ", представленная в учебном материале Валерия Леонидовича ШАТУНОВСКОГО http://shat307.ru/_els19/index.html <br></li>
-<IMG SRC="d-nand.jpg" width="400" ALIGN="center"><br>
-<li><p align=left>Дана универсальная микросхема JK-триггера <br></li>
-<IMG SRC="jk-micr.jpg" width ="400" ALIGN="center"><br><br></ul>
+     <li><p align=left>Дана программа компьютерного моделирования электронных схем "TINA" </li>
+     <li><p align=left>Дана проверенная на "TINA" схема Т-триггера и известен принцип работы этого триггера </li> 
+	 <li><p align=left>Дана схема простейшего 4-разрядного вычитающего двоичного счетчика на Т-триггерах и известен принцип работы этого счетчика </li>
+<IMG SRC="rs-nor.jpg" width="400" ALIGN="center"> <br>
+     <li><p align=left>Дана микросхема дешифратора BCD to seven segment decoder и микросхема семисегментного индикатора </li>
+
+
 <hr size=+2 color=red>
 <font face="comic sans ms" size=+4 color=red>
-Что надо найти? <br></font>Надо показать, как работает D-триггер на элементах "И-НЕ" и на микросхеме JK в "TINA" <br>
+Что надо найти?
+</font> <br>Надо показать:<ul><li><p align=left> процесс уменьшения содержимого счетчика на единицу при поступлении каждого входного импульса
+<li><p align=left>как преобразовать полученный на счетчике двоичный код в изображение его десятичного эквивалента <br></ul>
+
 <font face="comic sans ms" size=+4 color=red><hr color=red>
-Как это сделать? <br></font> Для решения этой задачи мы имеем компьютерную модель "TINA", где и будем собирать представленные схемы триггеров. 
-Затем, подавая различные сигналы на входы триггеров, мы будем составлять таблицы их состояний.
-Задача будет считаться<i><font color=red> решенной верно</font></i>, если теоретические таблицы состояний триггеров совпадут с таблицами состояний, составленных нами в "TINA".
+Как это сделать? <br> </font><font face="comic sans ms" size=+3 color=blue>
+<u>Для решения этой задачи</font></u> мы имеем компьютерную модель "TINA", где и будем собирать схему данного счетчика. 
+Подавая тактовые импульсы на вход счетчика, мы будем вычитать из 15 количество поданных импульсов <br><br>
+Задача будет считаться <i><font color=red>решенной верно</i></font>, если выведенное на семисегментном индикаторе число совпадает с полученной разностью.
+<br>
 <hr color=red><hr color=red>
 <font face="comic sans ms" size=+4 color=blue><b> 
 <p align=left>
@@ -156,24 +152,64 @@ b) На компьютерной модели "TINA" собрать D-триггер на микросхеме JK и проверить 
 <br>
 </font>
 <font face="comic sans ms" size=+3 color=darkblue> <br>
-На компьютерной модели "TINA" собрать T-триггер на микросхеме JK и проверить его работу.
+На компьютерной модели "TINA" собрать схему простейшего дешифратора и представить последовательность действий, демонстрирующих работу этого устройства в виде включения одной из трех ламп
 <font face="comic sans ms" size=+3 color=blue><b>
 <center>
 Исходя из поставленной задачи, ответим на вопросы: <br>
 <font face="comic sans ms" size=+4 color=red>
 <hr color=red>
-Что дано?<p align=left>
-   <ul></font>
+Что дано? <br></font>
+<p align=left>
+   <ul>
    <font face="comic sans ms" size=+3 color=darkblue>
-     <li><p align=left>  Дана универсальная микросхема JK-триггера <br></li>
-<IMG SRC="jk-micr.jpg" width="400" ALIGN="center"><br><br></ul>
+     <li><p align=left>Дана программа компьютерного моделирования электронных схем "TINA" </li>
+     <li><p align=left>Дана проверенная на "TINA" схема простейшего 4-разрядного суммирующего счетчика и известен принцип работы этого счетчика </li> 
+	 <li><p align=left>Дана схема простейшего дешифратора и известен принцип работы этого устройства </li>
+
+  
 <hr size=+2 color=red>
 
 <font face="comic sans ms" size=+4 color=red>
-Что надо найти? <br></font>Надо показать:<ul><li><p align=left> как работает T-триггер на микросхеме JK в "TINA" </ul></li>
-<font face="comic sans ms" size=+4 color=red><hr color=red>Как это сделать? <br></font>Для решения этой задачи мы имеем компьютерную модель "TINA", где и будем собирать T-триггер. 
-Затем, подавая различные сигналы на входы триггеров, мы будем составлять таблицу его состояний.
-Задача будет считаться <i><font color=red>решенной верно</font></i>, если теоретическая таблица состояний триггера совпадет с таблицей состояний, составленной нами в "TINA".
+Что надо найти? <br></font>Надо показать:<ul><li><p align=left> как включить одну из трех ламп в зависимости от кода, сформированного на счетчике "TINA" </ul></li>
+<font face="comic sans ms" size=+4 color=red><hr color=red>Как это сделать? <br></font>Для решения этой задачи мы имеем компьютерную модель "TINA", где и будем собирать простейший дешифратор.
+Затем, подавая тактовые импульсы на вход счетчика, мы будем смотреть, какая именно лампа загорелась и составлять таблицу состояний этого дешифратора.
+Задача будет считаться <i><font color=red>решенной верно</font></i>, если теоретическая таблица состояний дешифратора совпадет с таблицей состояний, составленной нами в "TINA".
+
+<br>
+
+
+<hr color=red><hr color=red>
+<font face="comic sans ms" size=+4 color=blue><b> 
+<p align=left>
+Задача №4
+<br>
+</font>
+<font face="comic sans ms" size=+3 color=darkblue> <br>
+На компьютерной модели "TINA" собрать схему простейшего мультиплексора и представить последовательность действий, демонстрирующих работу этого устройства в виде передачи напряжения от каждого
+из источников сигнала на вход АЦП
+<font face="comic sans ms" size=+3 color=blue><b>
+<center>
+Исходя из поставленной задачи, ответим на вопросы: <br>
+<font face="comic sans ms" size=+4 color=red>
+<hr color=red>
+Что дано? <br></font>
+<p align=left>
+   <ul>
+   <font face="comic sans ms" size=+3 color=darkblue>
+     <li><p align=left>Дана программа компьютерного моделирования электронных схем "TINA" </li>
+     <li><p align=left>Дана проверенная на "TINA" схема простейшего 4-разрядного суммирующего счетчика и известен принцип работы этого счетчика </li> 
+	 <li><p align=left>Дана схема простейшего дешифратора и известен принцип работы этого устройства </li>
+	 	 <li><p align=left>Дана схема аналогового мультиплексора и известен принцип работы этого устройства </li>
+
+  
+<hr size=+2 color=red>
+
+<font face="comic sans ms" size=+4 color=red>
+Что надо найти? <br></font>Надо показать:<ul><li><p align=left> как передать определенное напряжение от каждого из источников в зависимости от кода, сформированного на счетчике "TINA" </ul></li>
+<font face="comic sans ms" size=+4 color=red><hr color=red>Как это сделать? <br></font>Для решения этой задачи мы имеем компьютерную модель "TINA", где и будем собирать аналоговый мультиплексор.
+Затем, подавая тактовые импульсы на вход счетчика, мы будем смотреть, какое напряжение передано на вход АЦП.
+Задача будет считаться <i><font color=red>решенной верно</font></i>, если на выходе АЦП напряжение будет равняться напряжению входного сигнала с тем номером, двоичный код которого был
+сформирован счетчиком.
 
 <br>
 <hr color=red>
