--- a/рубеж 2/my site/vv3.html
+++ b/рубеж 2/my site/vv3.html
@@ -6,17 +6,12 @@
 <body background="back1.gif">
 <center>
 <font face="comic sans ms" size=+4 color=red><b>
-Логический элемент ИЛИ-НЕ
+Аналоговый мультиплексор
 <br>
 <center>
-<font face="comic sans ms" size=+2 color=darkblue><b> 
 
-Таблица истинности логического элемента ИЛИ-НЕ <br>
-<IMG SRC="OR-NO.jpg" width=500 ALIGN="center"><br>
+<IMG SRC="multiplex.jpg" width="80%" ALIGN="center"><br>
 
-Структурная схема логического элемента ИЛИ-НЕ, <br>
-представленная в учебном материале Валерия Леонидовича ШАТУНОВСКОГО http://shat307.ru/_els19/index.html <br>
-<IMG SRC="trans.jpg" width=900 ALIGN="center"><br>
 
 
 </body>
