--- a/рубеж 2/my site/vv4.html
+++ b/рубеж 2/my site/vv4.html
@@ -6,17 +6,11 @@
 <body background="back1.gif">
 <center>
 <font face="comic sans ms" size=+4 color=red><b>
-Логический элемент И-НЕ
+Счетчик
 <br>
 <center>
-<font face="comic sans ms" size=+2 color=darkblue><b> 
 
-Таблица истинности логического элемента И-НЕ<br>
-<IMG SRC="AND_NO.jpg" width=500 ALIGN="center"><br>
-
-Структурная схема логического элемента И-НЕ, <br>
-представленная в учебном материале Валерия Леонидовича ШАТУНОВСКОГО http://shat307.ru/_els19/index.html <br>
-<IMG SRC="trans1.jpg" width=900 ALIGN="center"><br>
+<IMG SRC="schet.jpg" width="80%" ALIGN="center"><br>
 
 
 </body>
