--- a/рубеж 2/my site/page2.html
+++ b/рубеж 2/my site/page2.html
@@ -119,7 +119,13 @@ photos[2]="schitchik4.jpg"
 photos[3]="schitchik5.jpg"
 photos[4]="schitchik6.jpg"
 photos[5]="schitchik7.jpg"
-photos[6]="schitchik8.jpg"
+photos[6]="N-rs6.jpg"
+photos[7]="schitchik9.jpg"
+photos[8]="schitchik10.jpg"
+photos[9]="schitchik11.jpg"
+photos[10]="schitchik12.jpg"
+photos[11]="schitchik14.jpg"
+
 
 
 var linkornot=0
@@ -131,6 +137,12 @@ photoslink[3]=""
 photoslink[4]=""
 photoslink[5]=""
 photoslink[6]=""
+photoslink[7]=""
+photoslink[8]=""
+photoslink[9]=""
+photoslink[10]=""
+photoslink[11]=""
+
 
 
 
@@ -248,36 +260,7 @@ document.write('</a>')
 
 </td>
 </table> 
-  <center>
-<font face="comic sans ms" size=+3 color=purple><b>
-<hr color=red>
-Теперь разберем непосредственно<br>
-работу 4-х разрядного двоичного счетчика импульсов<br>
 
-<table align=center>
-<td valign=top>
-<A HREF="JavaScript: if (num1>0) { num1=num1-1}; a1()">
-<img src="L.jpg"></A></td>
-
-<td>
-<div align="center">
-<A HREF="JavaScript: if (num1<gran1) { num1=num1+1}; a1()">
-<IMG SRC="slider1/0.jpg" NAME="pic1" BORDER=1 ></a>
-<br>
-</div>
-</td>
-
-<td valign=top>
-<A HREF="JavaScript: if (num1<gran1) { num1=num1+1}; a1()">
-<img src="R.jpg"></A></td>
-
-</td>
-</table>
-
-   
-
-</td>
-</table>
                   
 </body>
 </html> 
