--- a/рубеж 2/my site/page9.html
+++ b/рубеж 2/my site/page9.html
@@ -8,17 +8,10 @@
 <font face="comic sans ms" size=+4 color=darkblue><b>
 Задание №2<br><hr color=red>
 </font><br><font face="comic sans ms" size=+3 color=blue><b>
-D-триггер на логических элементах И-НЕ<br><br>
-<font face="comic sans ms" size=+2 color=red><b><i>
-Решение задачи 2-а) находится в файле рубеж1/"D-NAND.TSC":<br></i>
-<IMG SRC="N-resultD.jpg" WIDTH=900 ALIGN="center"><br>
-
-</font><br><font face="comic sans ms" size=+3 color=blue><b>
-D-триггер на микросхеме JK<br>
-<font face="comic sans ms" size=+2 color=red><b><i>
-Решение задачи 2-b) находится в файле рубеж1/"D-JK.TSC":<br></i>
-<IMG SRC="N-DJK12.jpg" WIDTH=900 ALIGN="center"><br>
-
+4-х разрядный вычитающий двоичный счетчик на T-триггерах
+<font face="comic sans ms" size=+2 color=red><b><i><br>
+Решение задачи 2 файле рубеж1/"obr_s4et.TSC":<br></i>
+<IMG SRC="vicschetchik.jpg" WIDTH=900 ALIGN="center"><br>
  
 </body>
 </html> 
