--- a/рубеж 2/my site/page10.html
+++ b/рубеж 2/my site/page10.html
@@ -90,11 +90,11 @@ a:hover {color: red; font-size: 24; font-weight: ; left: 10px}
 <table width=100% align-center border=0>
 <center>
 <font face="comic sans ms" size=+4 color=darkblue><b>
-Задание №2<br><hr color=red><small><small><small>
+Задание №3<br><hr color=red><small><small><small>
 </font>
 <center>
 <font face="comic sans ms" size=+3 color=darkblue><b>
-<u>В задаче №2 пункта 2 главное:</u><center>
+<u>В задаче №3</u><center>
 Проверить работу а D-триггер на "микросхеме JK"
 D-триггер на микросхеме JK<br><br>
 <IMG SRC="d-jk.jpg" ALIGN="center"><br>
