--- a/рубеж 2/my site/page12.html
+++ b/рубеж 2/my site/page12.html
@@ -16,11 +16,19 @@ var photos=new Array()
 var photoslink=new Array()
 var which=0
 
-photos[0]="N-DJK.jpg"
-photos[1]="N-DJK1.jpg"
-photos[2]="N-DJK2.jpg"
-photos[3]="N-DJK3.jpg"
-photos[4]="N-TJK3.jpg"
+photos[0]="desh0.jpg"
+photos[1]="desh1.jpg"
+photos[2]="desh2.jpg"
+photos[3]="desh3.jpg"
+photos[4]="desh4.jpg"
+photos[5]="desh5.jpg"
+photos[6]="desh6.jpg"
+photos[7]="desh7.jpg"
+photos[8]="desh8.jpg"
+photos[9]="desh9.jpg"
+photos[10]="desh10.jpg"
+
+var linkornot=0
 
 var linkornot=0
 
@@ -29,6 +37,13 @@ photoslink[1]=""
 photoslink[2]=""
 photoslink[3]=""
 photoslink[4]=""
+photoslink[5]=""
+photoslink[6]=""
+photoslink[7]=""
+photoslink[8]=""
+photoslink[9]=""
+photoslink[10]=""
+
 
 
 var preloadedimages=new Array()
@@ -113,20 +128,9 @@ a:hover {color: red; font-size: 24; font-weight: ; left: 10px}
 <center>
 <font face="comic sans ms" size=+3 color=darkblue><b>
 <u>В задаче №3 главное:</u><center><font face="comic sans ms" size=+3 color=red><b> 
-Проверить работу T-триггера на <a href="javascript: vv5()" > 
-микросхеме JK (доп.окно)</a>
-</font><font face="comic sans ms" size=+3 color=darkblue><b><br>
-Для решения данной задачи:</font><p align="left"><br>
-1)Возьмем построенный на JK-микросхеме D-триггер и будем его менять.<br>
-<IMG SRC="d-jk.jpg" width="400" ALIGN="center"><br>
-2) Отсоединим вход D,
-а выход с Q-инверсного отправим на вход J.<br>
-3)В результате построения на Tina мы ожидаем увидеть, как Q изменяет состояние с приходом импульса на С,
-т.е. получить счетчик импульсов.<br>
-<IMG SRC="t-d.jpg" width="400" ALIGN="center"><br>
-<font face="comic sans ms" size=+3 color=blue><b>
+Проверить работу простейшего дешифратора.<br>
+<font face="comic sans ms" size=+3 color=darkblue><b>
 <center>
-<hr color=red>
 ИТАК для решения задачи №3 будем придерживаться следующего плана:<br>
 <font face="comic sans ms" size=+3 color=purple><b><center>
 Этапы построения<br>
@@ -155,30 +159,7 @@ document.write('</a>')
 
 </td>
 </table> 
-<font face="comic sans ms" size=+3 color=purple><b>
-<hr color=red>
-Разберем работу и построение T-триггера на микросхеме JK<br>
-<center>
 
-<table align=center>
-<td valign=top>
-<A HREF="JavaScript: if (num9>0) { num9=num9-1}; a9()">
-<img src="L.jpg"></A></td>
-
-<td>
-<div align="center">
-<A HREF="JavaScript: if (num9<gran9) { num9=num9+1}; a9()">
-<IMG SRC="slider9/0.jpg" NAME="pic9" BORDER=1 ></a>
-<br>
-</div>
-</td>
-
-<td valign=top>
-<A HREF="JavaScript: if (num9<gran9) { num9=num9+1}; a9()">
-<img src="R.jpg"></A></td>
-
-</td>
-</table>
 
                   
 </body>
