--- a/рубеж 2/my site/page8.html
+++ b/рубеж 2/my site/page8.html
@@ -196,7 +196,7 @@ function a7()
 <script>
 if (linkornot==1)
 document.write('<a href="javascript:transport()">')
-document.write('<img src="'+photos[0]+'" name="photoslider" width="700" height="440" style="filter:revealTrans(duration=2,transition=23)" border=0>')
+document.write('<img src="'+photos[0]+'" name="photoslider" width=90% style="filter:revealTrans(duration=2,transition=23)" border=0>')
 if (linkornot==1)
 document.write('</a>')
 </script>
