--- a/рубеж 2/my site/page1N.html
+++ b/рубеж 2/my site/page1N.html
@@ -94,7 +94,7 @@ function vv8()
      <li><p align=left>Дана программа компьютерного моделирования электронных схем "TINA" </li>
      <li><p align=left>Дана проверенная на "TINA" схема Т-триггера и известен принцип работы этого триггера </li> 
 	 <li><p align=left>Дана схема простейшего 4-разрядного суммирующего двоичного счетчика на Т-триггерах и известен принцип работы этого счетчика </li>
-<IMG SRC="rs-nor.jpg" width="400" ALIGN="center"> <br>
+<IMG SRC="sch1.jpg" width=70% ALIGN="center"> <br>
      <li><p align=left>Дана микросхема дешифратора BCD to seven segment decoder и микросхема семисегментного индикатора </li>
 
 <hr size=+2 color=red>
@@ -129,7 +129,7 @@ function vv8()
      <li><p align=left>Дана программа компьютерного моделирования электронных схем "TINA" </li>
      <li><p align=left>Дана проверенная на "TINA" схема Т-триггера и известен принцип работы этого триггера </li> 
 	 <li><p align=left>Дана схема простейшего 4-разрядного вычитающего двоичного счетчика на Т-триггерах и известен принцип работы этого счетчика </li>
-<IMG SRC="rs-nor.jpg" width="400" ALIGN="center"> <br>
+<IMG SRC="vich1.jpg" width=70% ALIGN="center"> <br>
      <li><p align=left>Дана микросхема дешифратора BCD to seven segment decoder и микросхема семисегментного индикатора </li>
 
 
